--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -4,7 +4,7 @@
   <label for="menü-ana-çapraz">///</label>
   <ul class="imge" data-menü="görünür dikey">
     <li class="{% if page.url == '/1.0/tr/' %}etkin{% endif %}">
-      <a href="/1.0/tr/">Giriş</a>
+      <a href="/1.0/tr/">Başlangıç</a>
     </li>
     <li class="{% if page.url contains '/1.0/tr/kurulum' %}etkin{% endif %}">
       <a href="/1.0/tr/kurulum">Kurulum</a>
