--- a/assets/css/imge.css
+++ b/assets/css/imge.css
@@ -104,6 +104,13 @@ body {
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 
+div, footer, main, header{
+  display: flex;
+  flex-wrap: wrap;
+  width:100%;
+  max-width: 100%;
+}
+
 /* Yazı Özellikleri */
 p {
 	line-height: 1.5;
