--- a/assets/deveb-s1n0/deveb.css
+++ b/assets/deveb-s1n0/deveb.css
@@ -149,6 +149,11 @@ Düzenler //////////////////////////////////
 /*  G00 GENEL | Ekran ölçeği: 0 ≤ * < ∞
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /*  GS1 KAP ÖRGÜSÜ */
+[data-gnl] {
+  --parça: 1;
+  --parçalık:1;
+}
+
 [data-gnl], [data-ufk], [data-kçk], [data-ort], [data-byk], [data-kcm], [data-dev] {
   display: flex;
   flex-wrap: wrap;
