--- a/_layouts/s1n0/varsayilan.html
+++ b/_layouts/s1n0/varsayilan.html
@@ -3,8 +3,7 @@
 <head>
 {% include s1n0/head.html %}
 </head>
-<body data-gnl="sütun sığ">
-
+<body data-gnl="tamekran">
   <div data-gnl="sığ oluk-çevre">
     <div id="sol-alan" data-gnl="üstte" data-kçk="4 22p sığ oluk-çevre">
       <div data-gnl=" göbekte geniş-aralıklı" data-dev="2 3p sağda-ol göbekte-ol">
