--- a/assets/deveb-s1n0/_sifirlama.scss
+++ b/assets/deveb-s1n0/_sifirlama.scss
@@ -12,7 +12,10 @@
       -webkit-text-size-adjust: 100%; }
 
     body{
-      margin: 0; }
+      margin: 0;
+      display: flex;
+      flex-wrap: wrap;
+      }
 
 
     article, aside, details, figcaption, figure,
