--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -21,6 +21,9 @@
         <li class="{% if page.url contains '/1.0/tr/kap-orgusu/parca-duzeni' %}etkin{% endif %}">
           <a href="/1.0/tr/kap-orgusu/parca-duzeni">Parça Düzeni</a>
         </li>
+        <li class="{% if page.url contains '/1.0/tr/kap-orgusu/dizem-duzeni' %}etkin{% endif %}">
+          <a href="/1.0/tr/kap-orgusu/dizem-duzeni">Dizem Düzeni</a>
+        </li>
         <li class="{% if page.url contains '/1.0/tr/kap-orgusu/genlesme-duzeni' %}etkin{% endif %}">
           <a href="/1.0/tr/kap-orgusu/genlesme-duzeni">Genleşme Düzeni</a>
         </li>
