deveb 1.0 kap örgüsü
Kap örgüsünde 0 değeri baskın duruma getirildi.

--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -50,7 +50,7 @@ Düzenler //////////////////////////////////
         flex: #{$i};
       }
     }
-    [data-#{$ekran}~="0"]{
+    [data-#{$ekran}~="0"][data-#{$ekran}~="0"]{
       flex-basis: auto;
       max-width: none;
       width: auto;
