--- a/assets/deveb-s1n0/_dil-tr.scss
+++ b/assets/deveb-s1n0/_dil-tr.scss
@@ -70,9 +70,9 @@ $araları: araları;
 $oluk-çevre: oluk-çevre;
 $oluk: oluk;
 $oluk-yok: oluk-yok;
-$kaplama: kaplama;
-$bunu-kaplama: bunu-kaplama;
-$küçükleri-kaplama: küçükleri-kaplama;
-$küçükleriyle-kaplama: küçükleriyle-kaplama;
-$büyükleriyle-kaplama: büyükleriyle-kaplama;
-$büyükleri-kaplama: büyükleri-kaplama;
+$kap: kap;
+$bunu-kap: bunu-kap;
+$küçükleri-kap: küçükleri-kap;
+$küçükleriyle-kap: küçükleriyle-kap;
+$büyükleriyle-kap: büyükleriyle-kap;
+$büyükleri-kap: büyükleri-kap;
